# choinka

./: .gitignore  CMakeLists.txt  choinka.ino  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  legacy_proto.c  legacy_proto.h  log_time_vprintf.h  mesh_log_stream.c  mesh_log_stream.h  mesh_main.c  mesh_ota_receiver.c  mesh_ota_receiver.h  mesh_proto.h  mesh_time_sync.c  mesh_time_sync.h  mesh_v2_link.c  mesh_v2_link.h  pump_controller.c  pump_controller.h  pump_controller_selftest.c  pump_controller_selftest.h  pump_driver.c  pump_driver.h  pump_node.c  pump_node.h  stack_monitor.c  stack_monitor.h  water_level_sensor.c  water_level_sensor.h
